--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <nav>
       <a class="logo" href="/">Web<span class="logo-studio">Studio</span></a>
       <ul>
-        <li><a class="active-link" href="index.html">Studio</a></li>
+        <li><a class="header-link" href="index.html">Studio</a></li>
         <li><a class="header-link" href="portfolio.html">Portfolio</a></li>
-        <li><a class="header-link" href="#">Contacts</a></li>
+        <li><a class="header-link" href="Contacts.html">Contacts</a></li>
       </ul>
     </nav>
 
@@ -102,7 +102,7 @@
           <figure>
           <img src="./images/Banking.jpg" alt="Banking" width="360" height="300" />
             <figcaption>
-              <h3 class="team-subtitle">Banking App</h3>
+              <h3 class="subtitle">Banking App</h3>
               <p class="profesion">App</p>
             </figcaption>
           </figure>
@@ -112,7 +112,7 @@
           <figure>
             <img src="./images/Cashless.jpg" alt="Cashless" width="360" height="300" />
             <figcaption>
-              <h3 class="team-subtitle">Cashless Payment</h3>
+              <h3 class="subtitle">Cashless Payment</h3>
               <p class="profesion">Marketing</p>
             </figcaption>
           </figure>
@@ -121,7 +121,7 @@
           <figure>
             <img src="./images/Meditation.jpg" alt="Meditation" width="360" height="300" />
             <figcaption>
-              <h3 class="team-subtitle">Meditation App</h3>
+              <h3 class="subtitle">Meditation App</h3>
               <p class="profesion">App</p>
             </figcaption>
           </figure>
@@ -130,7 +130,7 @@
           <figure>
             <img src="./images/Taxi.jpg" alt="Taxi" width="360" height="300" />
             <figcaption>
-              <h3 class="team-subtitle">Taxi Service</h3>
+              <h3 class="subtitle">Taxi Service</h3>
               <p class="profesion">Marketing</p>
             </figcaption>
           </figure>
@@ -139,7 +139,7 @@
           <figure>
             <img src="./images/Screen.jpg" alt="Screen" width="360" height="300" />
             <figcaption>
-              <h3 class="team-subtitle">Screen Illustrations</h3>
+              <h3 class="subtitle">Screen Illustrations</h3>
               <p class="profesion">Design</p>
             </figcaption>
           </figure>
@@ -148,7 +148,7 @@
           <figure>
             <img src="./images/Online.jpg" alt="Courses" width="360" height="300" />
             <figcaption>
-              <h3 class="team-subtitle">Online Courses</h3>
+              <h3 class="subtitle">Online Courses</h3>
               <p class="profesion">Marketing</p>
             </figcaption>
           </figure>
