--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <nav>
       <a class="logo" href="/">Web<span class="logo-studio">Studio</span></a>
       <ul>
-        <li><a class="header-link" href="index.html">Studio</a></li>
-        <li><a class="header-link" href="portfolio.html">Portfolio</a></li>
-        <li><a class="header-link" href="Contacts.html">Contacts</a></li>
+        <li><a class="header-link" href="./index.html">Studio</a></li>
+        <li><a class="header-link" href="./index.html">Portfolio</a></li>
+        <li><a class="header-link" href="./index.html">Contacts</a></li>
       </ul>
     </nav>
 
