--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="header-background">
 
     <nav>
-      <a class="logo" href="/">Web<span class="logo-studio">Studio</span></a>
+      <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
       <ul>
         <li><a class="header-link" href="./index.html">Studio</a></li>
         <li><a class="header-link" href="./index.html">Portfolio</a></li>
