--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
+<body class="body-background">
   <header class="header-background">
 
     <nav>
-      <a class="logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
+      <a class="logo" href="">Web<span class="logo-studio">Studio</span></a>
       <ul>
         <li><a class="header-link" href="./index.html">Studio</a></li>
         <li><a class="header-link" href="./index.html">Portfolio</a></li>
@@ -159,9 +159,8 @@
 
   <footer class="footer-background">
     <div>
-
-      <a class="logo" href="/">Web<span class="logo-studio-footer">Studio</span></a>
-<p>
+      <a class="logo-footer" href="#">Web<span class="logo-studio-footer">Studio</span></a>
+<p class="text">
   Increase the flow of customers and sales for your business with digital
   marketing & growth solutions.
 </p>
