--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
 
     <ul>
-      <li><a class="header-email" href="#">info@devstudio.com</a></li>
+      <li><a class="header-email" href="info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="header-num">+11 000 111 11 11</a></li>
     </ul>
   </header>
