--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
     </ul>
   </header>
   <main>
-
+<!--section 1-->
     <div>
       <section class="hero-section">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="big-button" type="button">Order Service</button>
       </section>
     </div>
-    <section>
+    <!--section 2-->
+    <section class="">
       <ul>
         <li>
           <h2 class="heading-subtitle">Strategy</h2>
@@ -69,41 +70,42 @@
         </li>
       </ul>
     </section>
+    <!--section 3-->
     <section>
-      <h3 class="heading-title">Our Team</h3>
+      <h2 class="heading-title">Our Team</h2>
       <ul>
         <li>
           <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
+          <h3 class="team-subtitle"> Mark Guerrero</h3>
+          <p class="profesion">Product Designer</p>
         </li>
         <li>
           <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
+          <h3 class="team-subtitle">Tom Ford</h3>
+          <p class="profesion">Frontend Developer</p>
         </li>
         <li>
           <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
+          <h3 class="team-subtitle">Camila Garcia</h3>
+          <p class="profesion">Marketing</p>
         </li>
         <li>
           <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
+          <h3 class="team-subtitle">Daniel Wilson</h3>
+          <p class="profesion">UI Designer</p>
         </li>
       </ul>
     </section>
-
+<!--section 4-->
     <section class="last-section">
-      <h3 class="heading-title">Our Portfolio</h3>
+      <h2 class="heading-title">Our Portfolio</h2>
       <ul>
         <li>
           <figure>
           <img src="./images/Banking.jpg" alt="Banking" width="360" height="300" />
             <figcaption>
               <h3 class="subtitle">Banking App</h3>
-              <p class="profesion">App</p>
+              <p class="paragraf-prof">App</p>
             </figcaption>
           </figure>
 
@@ -113,7 +115,7 @@
             <img src="./images/Cashless.jpg" alt="Cashless" width="360" height="300" />
             <figcaption>
               <h3 class="subtitle">Cashless Payment</h3>
-              <p class="profesion">Marketing</p>
+              <p class="paragraf-prof">Marketing</p>
             </figcaption>
           </figure>
         </li>
@@ -122,7 +124,7 @@
             <img src="./images/Meditation.jpg" alt="Meditation" width="360" height="300" />
             <figcaption>
               <h3 class="subtitle">Meditation App</h3>
-              <p class="profesion">App</p>
+              <p class="paragraf-prof">App</p>
             </figcaption>
           </figure>
         </li>
@@ -131,7 +133,7 @@
             <img src="./images/Taxi.jpg" alt="Taxi" width="360" height="300" />
             <figcaption>
               <h3 class="subtitle">Taxi Service</h3>
-              <p class="profesion">Marketing</p>
+              <p class="paragraf-prof">Marketing</p>
             </figcaption>
           </figure>
         </li>
@@ -140,7 +142,7 @@
             <img src="./images/Screen.jpg" alt="Screen" width="360" height="300" />
             <figcaption>
               <h3 class="subtitle">Screen Illustrations</h3>
-              <p class="profesion">Design</p>
+              <p class="paragraf-prof">Design</p>
             </figcaption>
           </figure>
         </li>
@@ -149,20 +151,21 @@
             <img src="./images/Online.jpg" alt="Courses" width="360" height="300" />
             <figcaption>
               <h3 class="subtitle">Online Courses</h3>
-              <p class="profesion">Marketing</p>
+              <p class="paragraf-prof">Marketing</p>
             </figcaption>
           </figure>
         </li>
       </ul>
     </section>
   </main>
-
+<!--section footer-->
   <footer class="footer-background">
     <div>
       <a class="logo-footer" href="#">Web<span class="logo-studio-footer">Studio</span></a>
-<p class="text">
-  Increase the flow of customers and sales for your business with digital
-  marketing & growth solutions.
+<br class="text">
+  Increase the flow of customers and </br>
+  sales for your business with digital</br>
+  marketing & growth solutions.</br>
 </p>
 
     </div>
