--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         <li><a class="header-link" href="./index.html">Contacts</a></li>
       </ul>
     </nav>
-
-    <ul>
+<address class="main_addres"
+    <ul class="ul-addres">
       <li><a class="header-email" href="info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="header-num">+11 000 111 11 11</a></li>
     </ul>
+   </address>
   </header>
   <main>
 <!--section 1-->
@@ -71,7 +72,7 @@
       </ul>
     </section>
     <!--section 3-->
-    <section>
+    <section class="team">
       <h2 class="heading-title">Our Team</h2>
       <ul>
         <li>
@@ -101,59 +102,34 @@
       <h2 class="heading-title">Our Portfolio</h2>
       <ul>
         <li>
-          <figure>
           <img src="./images/Banking.jpg" alt="Banking" width="360" height="300" />
-            <figcaption>
               <h3 class="subtitle">Banking App</h3>
               <p class="paragraf-prof">App</p>
-            </figcaption>
-          </figure>
-
         </li>
         <li>
-          <figure>
             <img src="./images/Cashless.jpg" alt="Cashless" width="360" height="300" />
-            <figcaption>
               <h3 class="subtitle">Cashless Payment</h3>
               <p class="paragraf-prof">Marketing</p>
-            </figcaption>
-          </figure>
         </li>
         <li>
-          <figure>
             <img src="./images/Meditation.jpg" alt="Meditation" width="360" height="300" />
-            <figcaption>
               <h3 class="subtitle">Meditation App</h3>
               <p class="paragraf-prof">App</p>
-            </figcaption>
-          </figure>
         </li>
         <li>
-          <figure>
             <img src="./images/Taxi.jpg" alt="Taxi" width="360" height="300" />
-            <figcaption>
               <h3 class="subtitle">Taxi Service</h3>
               <p class="paragraf-prof">Marketing</p>
-            </figcaption>
-          </figure>
         </li>
         <li>
-          <figure>
             <img src="./images/Screen.jpg" alt="Screen" width="360" height="300" />
-            <figcaption>
               <h3 class="subtitle">Screen Illustrations</h3>
               <p class="paragraf-prof">Design</p>
-            </figcaption>
-          </figure>
         </li>
         <li>
-          <figure>
             <img src="./images/Online.jpg" alt="Courses" width="360" height="300" />
-            <figcaption>
               <h3 class="subtitle">Online Courses</h3>
               <p class="paragraf-prof">Marketing</p>
-            </figcaption>
-          </figure>
         </li>
       </ul>
     </section>
