--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <a class="logo" href="">Web<span class="logo-studio">Studio</span></a>
       <ul>
         <li><a class="header-link" href="./index.html">Studio</a></li>
-        <li><a class="header-link" href="./index.html">Portfolio</a></li>
-        <li><a class="header-link" href="./index.html">Contacts</a></li>
+        <li><a class="header-link" href="">Portfolio</a></li>
+        <li><a class="header-link" href="">Contacts</a></li>
       </ul>
     </nav>
-<address class="main_addres"
+<address class="main_addres">
     <ul class="ul-addres">
       <li><a class="header-email" href="info@devstudio.com">info@devstudio.com</a></li>
       <li><a class="header-num">+11 000 111 11 11</a></li>
@@ -35,35 +35,34 @@
   </header>
   <main>
 <!--section 1-->
-    <div>
       <section class="hero-section">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="big-button" type="button">Order Service</button>
       </section>
-    </div>
     <!--section 2-->
     <section class="">
+      <h2>Business Technologies</h2>
       <ul>
         <li>
-          <h2 class="heading-subtitle">Strategy</h2>
+          <h3 class="heading-subtitle">Strategy</h3>
           <p class="description"> Our goal is to identify the business problem to walk away with the
           perfect and creative solution.</p>
         </li>
         <li>
-          <h2 class="heading-subtitle">Punctuality</h2>
+          <h3 class="heading-subtitle">Punctuality</h3>
           <p class="description">Bring the key message to the brand's audience for the best price
           within the shortest possible time.
           </p>
         </li>
         <li>
-          <h2 class="heading-subtitle">Diligence</h2>
+          <h3 class="heading-subtitle">Diligence</h3>
           <p class="description">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
         </li>
         <li>
-          <h2 class="heading-subtitle">Technologies</h2>
+          <h3 class="heading-subtitle">Technologies</h3>
           <p class="description">
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
@@ -136,15 +135,12 @@
   </main>
 <!--section footer-->
   <footer class="footer-background">
-    <div>
       <a class="logo-footer" href="#">Web<span class="logo-studio-footer">Studio</span></a>
-<br class="text">
-  Increase the flow of customers and </br>
-  sales for your business with digital</br>
-  marketing & growth solutions.</br>
+<p class="text">
+  Increase the flow of customers and 
+  sales for your business with digital
+  marketing & growth solutions.
 </p>
-
-    </div>
   </footer>
 </body>
 
