--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
     <section class="team">
       <h2 class="heading-title">Our Team</h2>
       <ul>
-        <li>
+        <li class="team-fon">
           <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
           <h3 class="team-subtitle"> Mark Guerrero</h3>
           <p class="profesion">Product Designer</p>
         </li>
-        <li>
+        <li class="team-fon">
           <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
           <h3 class="team-subtitle">Tom Ford</h3>
           <p class="profesion">Frontend Developer</p>
         </li>
-        <li>
+        <li class="team-fon">
           <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" />
           <h3 class="team-subtitle">Camila Garcia</h3>
           <p class="profesion">Marketing</p>
         </li>
-        <li>
+        <li class="team-fon">
           <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
           <h3 class="team-subtitle">Daniel Wilson</h3>
           <p class="profesion">UI Designer</p>
