--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </nav>
 <address class="main_addres">
     <ul class="ul-addres">
-      <li><a class="header-link header-addres" href="info@devstudio.com">info@devstudio.com</a></li>
-      <li><a class="header-link header-addres">+11 000 111 11 11</a></li>
+      <li><a class="header-addres" href="info@devstudio.com">info@devstudio.com</a></li>
+      <li><a class="header-num">+11 000 111 11 11</a></li>
     </ul>
    </address>
   </header>
