--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <a class="logo" href="">Web<span class="logo-studio">Studio</span></a>
       <ul>
-        <li><a class="header-link" href="./index.html">Studio</a></li>
+        <li><a class="header-link:focus" href="./index.html">Studio</a></li>
         <li><a class="header-link" href="">Portfolio</a></li>
         <li><a class="header-link" href="">Contacts</a></li>
       </ul>
@@ -29,7 +29,7 @@
 <address class="main_addres">
     <ul class="ul-addres">
       <li><a class="header-addres" href="info@devstudio.com">info@devstudio.com</a></li>
-      <li><a class="header-num">+11 000 111 11 11</a></li>
+      <li><a class="header-addres">+11 000 111 11 11</a></li>
     </ul>
    </address>
   </header>
