--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
       <a class="logo" href="">Web<span class="logo-studio">Studio</span></a>
       <ul>
-        <li><a class="header-link:focus" href="./index.html">Studio</a></li>
+        <li><a class="header-link" href="./index.html">Studio</a></li>
         <li><a class="header-link" href="">Portfolio</a></li>
         <li><a class="header-link" href="">Contacts</a></li>
       </ul>
