--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body class="body-background">
+<body class="body-background"
   <header class="header-background">
 
     <nav>
